# crafting-interpreters

./: README.md  flake.nix  shell.nix
bytecode/: Cargo.toml
bytecode/src/: chunk.rs  compiler.rs  func.rs  lox.rs  main.rs  op.rs  scanner.rs  token.rs  value.rs  vm.rs
tree-walker/: CHANGELOG.md  README.md  htreelox.cabal  package.yaml  tree-walker.cabal
tree-walker/app/: Main.hs
tree-walker/src/: Cli.hs
tree-walker/src/Lox/: Ast.hs  Cli.hs  Interpreter.hs  Lox.hs  Parse.hs  Parser.hs  Resolver.hs  Scanner.hs  Token.hs
tree-walker/test/: Spec.hs
