[package]
name = "bytecode"
version = "0.1.0"
edition = "2021"
authors = ["Emanuel S. <emanuel@empa.xyz>"]
description = "My Lox interpreter"

[features]
debug_trace = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
