cabal-version: 3.4
name:          htreelox
version:       0.1.0.0
maintainer:    emanuel@empa.xyz
author:        Emanuel S.
description:   A tree walker implementation of Lox
category:      Development
build-type:    Simple

library
    exposed-modules:
        Lox.Ast
        Lox.Cli
        Lox.Interpreter
        Lox.Lox
        Lox.Parse
        Lox.Parser
        Lox.Scanner
        Lox.Token

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        containers,
        hspec,
        optparse-applicative,
        time

executable htreelox
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        containers,
        hspec,
        htreelox,
        optparse-applicative,
        time

test-suite htreelox-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        containers,
        hspec,
        htreelox,
        optparse-applicative,
        time
