cabal-version: 3.4
name:          htreelox
version:       0.1.0.0
maintainer:    emanuel@empa.xyz
author:        Emanuel S.
description:   A tree walker implementation of Lox
category:      Development
build-type:    Simple

library
    exposed-modules:
        Lox.Ast
        Lox.Cli
        Lox.Interpreter
        Lox.Lox
        Lox.Parse
        Lox.Parser
        Lox.Scanner
        Lox.Token

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        mtl >= 2.2.2 && < 2.3,
        containers >= 0.6.5 && < 0.7,
        hspec >= 2.11.4 && < 2.12,
        time >= 1.11.1 && < 1.12,
        optparse-applicative >= 0.18.1 && < 0.19,


executable htreelox
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        htreelox,

test-suite htreelox-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings DisambiguateRecordFields DuplicateRecordFields
        OverloadedRecordDot LambdaCase MultiWayIf RecordWildCards
        ViewPatterns NoFieldSelectors

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-home-modules
        -Wredundant-constraints -Wno-name-shadowing

    build-depends:
        base >=4.7 && <5,
        hspec >= 2.11.4 && < 2.12,
        htreelox,
